--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,13 +1,43 @@
-<mat-toolbar class="max-w-7xl mx-auto border-x justify-between" color="primary">
+<mat-toolbar class="max-w mx-auto border-x justify-between" color="primary">
+  <div div class="container mx-auto flex justify-between">
     <a routerLink="home">Code store</a>
    
-    <button >
-    
+    <button  mat-icon-button [matMenuTriggerFor]="menu">
      <mat-icon
         [matBadge]="1"
         matBadgeColor="warn"
       >shopping_cart</mat-icon>
-
     </button>
 
+    <mat-menu #menu="matMenu">
+        <div class="p-3 flex divide-y divide-solid">
+            <span class="mr-16">1 Item</span>
+            <a routerLink="cart">view card</a>
+        </div>
+
+        <div class="p-3 flex divide-y divide-solid">
+            <span class="mr-16">2 Item</span>
+            <a routerLink="cart">{{1000 | currency}}</a>
+        </div>
+        <div class="p-3 flex divide-y divide-solid">
+            <span class="mr-16">3 Item</span>
+            <a routerLink="cart">{{1500 | currency}}</a>
+        </div>
+
+        <div class="p-3 flex justify-between divide-y divide-solid">
+          Total:
+            <span class="font-bold"> {{'1000' | currency}}</span>
+        </div>
+
+        <div class="pt-3 flex justify-between divide-y divide-solid">
+            <button class="bg-red-700 hover:bg-red-500 text-white rounded-full w-10 h-10">
+                <mat-icon>remove_shopping_cart</mat-icon>
+            </button>
+            <button class="bg-green-700 hover:bg-green-500 text-white rounded-full w-10 h-10">
+                <mat-icon>check</mat-icon>
+            </button>
+
+        </div>
+    </mat-menu>
+  </div>
 </mat-toolbar> 
