--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<mat-drawer-container 
+[autosize]="true"
+class="min-h-full max-w-7xl mx-auto border-x">
+    <mat-drawer mode="side" opened class="p-6">
+            <div>Filters</div>
+    </mat-drawer>
+
+    <app-products-header></app-products-header>
+</mat-drawer-container>
